# roc2rawsplits

./: .gitignore  CMakeLists.txt  CWorkerObject.cpp  CWorkerObject.h  README.md  main.cpp  main.qrc  main.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui
